# KalkylR-kningar

./: .breakpoints  .deepsource.toml  .gitignore  .gitmodules  .style.yapf  README.md  airtableApi.py  auth_middleware.py  calendar_update.py  config.json  convert_projekt_to_id.py  cost_calc.py  delete_all_leveranser.js  delete_but_not_python.js  delete_calendar_things.py  delete_leverans.js  everything.json  folk.py  form.html  frilans_info.js  get_backup.js  get_id_from_airtable.py  google_drive_handler.py  input.json  main.py  orm.py  orm.py.bak  output.backup  paket.json  paket.json.bak  prylar.json  prylar.json.bak  pseduo kod.py  pyproject.toml  qodana.yaml  redo_leverans_to_new_standard.js  requirements.txt  run_form.py  send_input.js  send_input_automations_version1.js  (+7 more)
slackbot/: bot.py
templates/: form.html
