[tool.poetry]
name = "kalkylrakningar"
version = "0.1.0"
description = ""
authors = ["Edvin Bryntesson <edvin.bryntesson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyairtable = "^1.0.0"
slack-sdk = "^3.18.0"
slack-bolt = "^1.11.1"
python-dotenv = "^0.20.0"
Flask = "^2.0.2"
requests = "^2.28.1"
pandas = "^1.4.3"
ipython = "^8.1.1"
tabulate = "^0.8.10"
holidays = "^0.14.2"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
